# infrastructure-actions

./: .asf.yaml  .gitignore  .pre-commit-config.yaml  .rat-excludes  AGENTS.md  CONTRIBUTING.md  LICENSE  NOTICE  README.md  RELEASING.md  actions.yml  approved_patterns.yml  lock_file_exemptions.yml  pelicanconf.py  pyproject.toml  test_gateway.py
.claude/skills/analyze-action-pr/: SKILL.md
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/PULL_REQUEST_TEMPLATE/: action_approval.md  code_change.md
.github/actions/for-dependabot-triggered-reviews/: action.yml
.github/workflows/: build-artifacts.yml  build-pelican.yml  check-for-transitive-failures.yml  check-project-actions.yml  check_action_tags.yml  check_approved_limit.yml  codeql-analysis.yml  codeql.yml  dummy.yml  linting.yml  pelican-action-test.yml  pelican-version-test.yml  pre-commit.yml  pytest.yml  rat.yml  release-actions.yml  remove_expired.yml  stash-action-test.yml  test.yml  update.yml  update_actions.yml  update_allowlist.yml  update_composite_action.yml  update_dummy.yml  verify_dependabot_action.yml  verify_manual_action.yml  zizmor.yml
allowlist-check/: README.md  action.yml  check_asf_allowlist.py  insert_actions.py  test_check_asf_allowlist.py
asciidoc/: action.yml  convert-slides.js  example.adoc  package.json
build-pelican/: action.yml
check-actions-usage/: sample-ci-workflow.yml
check_action/: check_action.py
content/pages/: index.md
gateway/: action_tags.py  check_repository_actions.py  gateway.py  run_action_tags.py  test_action_tags.py  test_dummy.yml  test_gateway.py
gfmhtml/: render.py
gha_whitelist/: README.md  approved_patterns.yml  whitelist_manager.py
output/: index.html
pelican/: Docker.md  Dockerfile  README.md  action.yml  build-cmark.sh  fetch_plugins.py  plugin_paths.py  pylintrc  pyproject.toml  requirements.txt
pelican/migration/: README.md  build-pelican.ezt  build-pelican.yml  build-pelican.yml.ezt  generate_settings.py  pelican.auto.ezt  requirements.txt
pelican/plugins/: PLUGIN_ARCH.md  README.md  asfcopy.py  asfdata.py  asfgenid.py  asfindex.py  asfreader.py  asfrun.py  consensual_youtube.py  gfm.py  spu.py  toc.py  toc2.py
pelican/plugins/extract_toc/: extract_toc.py
pelican/plugins/md_inline_extension/: inline.py  pelican_inline_markdown_extension.py
plugins/: asfsignals.py  test.py
release-candidate/: README.md  action.yml  main.js
scripts/: release_actions.py  sort_yml.py  test_release_actions.py
stash/: .gitignore  README.md  pyproject.toml
stash/restore/: action.yml  download_stash.py  download_stash.sh  get_stash.py  test_download_stash.py  test_download_stash.sh  test_get_stash.py
stash/save/: action.yml
stash/shared/: mung.py
utils/: action-usage.sh  actions-audit.py  gha-find.py  pyproject.toml  rat.sh  setGHA.py  verify-action-build.py
utils/check_cache_settings/: audit-actions-cache.py  test_audit_actions_cache.py
utils/tests/verify_action_build/: test_action_ref.py  test_approved_actions.py  test_cli.py  test_console.py  test_diff_display.py  test_diff_js.py  test_diff_node_modules.py  test_docker_build.py  test_github_client.py  test_npm_registry_verify.py  test_pr_extraction.py  test_release_lookup.py  test_security.py  test_verification.py
utils/verify_action_build/: __init__.py  __main__.py  action_ref.py  approved_actions.py  cli.py  console.py  dependabot.py  diff_display.py  diff_js.py  diff_node_modules.py  diff_source.py  docker_build.py  github_client.py  npm_registry_verify.py  pr_extraction.py  release_lookup.py  security.py  verification.py
utils/verify_action_build/dockerfiles/: build_action.Dockerfile
