#
# Licensed to the Apache Software Foundation (ASF) under one
# or more contributor license agreements.  See the NOTICE file
# distributed with this work for additional information
# regarding copyright ownership.  The ASF licenses this file
# to you under the Apache License, Version 2.0 (the
# "License"); you may not use this file except in compliance
# with the License.  You may obtain a copy of the License at
#
#   http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing,
# software distributed under the License is distributed on an
# "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY
# KIND, either express or implied.  See the License for the
# specific language governing permissions and limitations
# under the License.
#

[build-system]
requires = ["setuptools>=82.0.1"]
build-backend = "setuptools.build_meta"

[project]
name = "apache-pelican-action"
version = "0.1.0"
description = "GitHub Action and supporting toolkit for building Apache project websites with Pelican."
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.10"
authors = [
    { name = "Apache Software Foundation", email = "dev@infra.apache.org" },
]
keywords = ["pelican", "apache", "github-action", "static-site"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Framework :: Pelican",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Build Tools",
    "Topic :: Text Processing :: Markup",
]
dependencies = [
    "markdown>=3.10.2,<4.0",
    "pelican-sitemap>=1.2.2,<2.0",
    "beautifulsoup4>=4.14.3,<5.0",
    "ezt>=1.1,<2.0",
    "PyYAML>=6.0.3,<7.0",
    "requests>=2.33,<3.0",
    "markupsafe>=2.0.1",
    "rich>=14.3.3",
    "Pygments>=2.17.0",
]

# PEP 735 dependency groups. `dev` holds everything a local developer needs
# but the runtime install does not: Pelican itself (installed by the action
# at runtime via `uv tool install 'pelican[markdown]==<version>'`, with the
# version controlled by the action's `version` input rather than this file),
# plus linting, type-checking and test tooling. The `Linting and MyPy
# (Pelican)` workflow syncs this group via `uv sync --no-install-project`
# and runs mypy / pylint out of the resulting venv.
[dependency-groups]
dev = [
    "pelican[markdown]>=4.11,<4.12",
    "ruff>=0.6",
    "pytest>=8",
    "mypy>=1.20.0",
    "pylint>=3",
    "types-PyYAML>=6.0",
    "types-requests>=2.33",
    "types-beautifulsoup4>=4.12",
    "types-markdown>=3.10",
]

[project.urls]
Homepage = "https://infra.apache.org/asf-pelican.html"
Source = "https://github.com/apache/infrastructure-actions"
Issues = "https://github.com/apache/infrastructure-actions/issues"

[tool.setuptools]
py-modules = ["plugin_paths"]

# uv settings. `required-version` enforces a minimum uv at runtime — PEP 735
# dependency groups (used by [dependency-groups].dev and Hatch's env config
# below) were added in uv 0.4.27, and the `required-version` setting itself
# was added in uv 0.5.0, so 0.5.0 is the floor we can enforce.
[tool.uv]
required-version = ">=0.5.0"

# Hatch environment definition. Hatch reads PEP 735 [dependency-groups]
# directly, so the `dev` group above is the single source of truth for
# lint/test tooling plus Pelican. `installer = "uv"` makes Hatch resolve
# and install via uv, matching the tooling used everywhere else.
[tool.hatch.envs.default]
installer = "uv"
dependency-groups = ["dev"]

[tool.hatch.envs.default.scripts]
lint = "ruff check ."
fmt = "ruff format ."
test = "pytest"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM"]
ignore = ["E501"]

[tool.ruff.format]
quote-style = "double"
